--- a/404.md
+++ b/404.md
@@ -1,5 +1,5 @@
 <p align="center">
-<a href="#"><img title="FROM INDIA" src="Copy of Untitled.svg"></a>
+<a href="#"><img title="FROM INDIA" src="https://cdn.moxrathore.com/social/Copy of Untitled.svg"></a>
 </p>
 <h1 align="center">Hi 👋, I'm MOX RATHORE</h1>
 <p align="center"> <img src="https://komarev.com/ghpvc/?username=moxrathore" alt="moxrathore"/></p>
@@ -17,11 +17,11 @@
 
 ### Connect with me:
 
-<p align="left"> <a href="https://www.twitter.com/moxrathore/" target="blank"><img align="left" src="4.svg" alt="moxrathore" height="30" width="40" /></a>
-<a href="https://instagram.com/moxrathore" target="blank"><img align="left" src="1.svg" alt="moxrathore" height="30" width="40" /></a>
-<a href="https://www.youtube.com/moxrathore" target="blank"><img align="left" src="3.svg" alt="moxrathore" height="30" width="40" /></a>
-  <a href="https://www.fb.com/moxrathore" target="blank"><img align="left" src="2.svg" alt="moxrathore" height="30" width="40" /></a>
-  <a href="https://api.whatsapp.com/send/?phone=916375324945" target="blank"><img align="left" src="5.svg" alt="moxrathore" height="30" width="40" /></a>
+<p align="left"> <a href="https://www.twitter.com/moxrathore/" target="blank"><img align="left" src="https://cdn.moxrathore.com/social/4.svg" alt="moxrathore" height="30" width="40" /></a>
+<a href="https://instagram.com/moxrathore" target="blank"><img align="left" src="https://cdn.moxrathore.com/social/1.svg" alt="moxrathore" height="30" width="40" /></a>
+<a href="https://www.youtube.com/moxrathore" target="blank"><img align="left" src="https://cdn.moxrathore.com/social/3.svg" alt="moxrathore" height="30" width="40" /></a>
+  <a href="https://www.fb.com/moxrathore" target="blank"><img align="left" src="https://cdn.moxrathore.com/social/2.svg" alt="moxrathore" height="30" width="40" /></a>
+  <a href="https://api.whatsapp.com/send/?phone=916375324945" target="blank"><img align="left" src="https://cdn.moxrathore.com/social/5.svg" alt="moxrathore" height="30" width="40" /></a>
 <!---
 Moxrathore/Moxrathore is a ✨ special ✨ repository because its `README.md` (this file) appears on your GitHub profile.
 You can click the Preview link to take a look at your changes.
